@@ -1,10 +1,9 @@
 package view;
 
-import java.util.Optional;
-
 import javafx.application.Platform;
 import javafx.geometry.Insets;
 import javafx.scene.Node;
+import javafx.scene.control.Button;
 import javafx.scene.control.ButtonBar.ButtonData;
 import javafx.scene.control.ButtonType;
 import javafx.scene.control.Dialog;
@@ -12,67 +11,90 @@ import javafx.scene.control.Label;
 import javafx.scene.control.PasswordField;
 import javafx.scene.control.TextField;
 import javafx.scene.layout.GridPane;
-import javafx.util.Pair;
+import javafx.scene.paint.Color;
+import javafx.scene.text.Font;
+import javafx.scene.text.Text;
+import javafx.util.Callback;
+import model.Employee;
+import repository.EmployeeRepository;
 
 public class LoginView {
-	
-	public LoginView() {
-		Dialog<Pair<String, String>> dialog = new Dialog<>();
-		dialog.setTitle("Login Dialog");
-		dialog.setHeaderText("Look, a Custom Login Dialog");
+	private Dialog<Void> dialog;
+	private Callback<Employee, Void> callback;
+	private EmployeeRepository employeeRepository;
 
-		// Set the button types.
-		ButtonType loginButtonType = new ButtonType("Login", ButtonData.OK_DONE);
-		dialog.getDialogPane().getButtonTypes().addAll(loginButtonType, ButtonType.CANCEL);
+	public LoginView(Callback<Employee, Void> callback) {
+		this.callback = callback;
+		employeeRepository = new EmployeeRepository();
+		dialog = new Dialog<>();
+		dialog.setTitle("Biblioteca");
+		dialog.setHeaderText("Bem-Vindo");
 
-		// Create the username and password labels and fields.
 		GridPane grid = new GridPane();
 		grid.setHgap(10);
 		grid.setVgap(10);
 		grid.setPadding(new Insets(20, 150, 10, 10));
 
-		TextField username = new TextField();
-		username.setPromptText("Username");
+		TextField email = new TextField();
+		email.setPromptText("Email");
 		PasswordField password = new PasswordField();
-		password.setPromptText("Password");
+		password.setPromptText("Senha");
+		Button loginButton = new Button("Entrar");
+		Text warningText = new Text();
+		warningText.setFill(Color.FIREBRICK);
+		warningText.setFont(Font.font(16));
+		
+		grid.addRow(0, new Label("Email:"), email);
+		grid.addRow(1, new Label("Senha:"), password);
+		grid.add(loginButton, 1, 2);
+		grid.addRow(3, warningText);
 
-		grid.add(new Label("Username:"), 0, 0);
-		grid.add(username, 1, 0);
-		grid.add(new Label("Password:"), 0, 1);
-		grid.add(password, 1, 1);
+		// sem isso o dialog não fecha
+		ButtonType buttonType = new ButtonType("Entrar", ButtonData.OK_DONE);
+		dialog.getDialogPane().getButtonTypes().add(buttonType);
+		Node buttonTypeNode = dialog.getDialogPane().lookupButton(buttonType);
+		buttonTypeNode.setDisable(true);
+		buttonTypeNode.setManaged(false);
+		buttonTypeNode.setVisible(false);
 
-		// Enable/Disable login button depending on whether a username was entered.
-		Node loginButton = dialog.getDialogPane().lookupButton(loginButtonType);
-		loginButton.setDisable(true);
+		email.textProperty().addListener((observable, oldValue, newValue) -> {
+			loginButton.setDisable(newValue.trim().isBlank() || 
+					password.getText().isBlank());
+			warningText.setText("");
+		});
 
-		// Do some validation (using the Java 8 lambda syntax).
-		username.textProperty().addListener((observable, oldValue, newValue) -> {
-			loginButton.setDisable(newValue.trim().isEmpty());
+		password.textProperty().addListener((observable, oldValue, newValue) -> {
+			loginButton.setDisable(newValue.trim().isBlank() ||
+					email.getText().isBlank());
+			warningText.setText("");
+		});
+
+		loginButton.setOnAction(event -> {
+			Employee employee = employeeRepository.getEmployee(
+					email.getText(), password.getText());
+			
+			if (employee != null) {
+				dialog.setHeaderText("Bem-Vindo, " + employee.getName().split(" ")[0]);
+				try {
+					Thread.sleep(3000);
+				} catch (InterruptedException e) {
+					e.printStackTrace();
+					Thread.currentThread().interrupt(); 
+				}
+				
+				dialog.close();
+				callback.call(employee);
+			} else {
+				warningText.setText("Email ou senha inválidos");
+			}
 		});
 
 		dialog.getDialogPane().setContent(grid);
-		
-		// Request focus on the username field by default.
-		Platform.runLater(() -> username.requestFocus());
 
-		// Convert the result to a username-password-pair when the login button is
-		// clicked.
-		dialog.setResultConverter(dialogButton -> {
-			if (dialogButton == loginButtonType) {
-				return new Pair<>(username.getText(), password.getText());
-			}
-			return null;
-		}); 
-		
-		dialog.setOnCloseRequest(event -> {
-			System.out.println("Closed");
-		});
+		Platform.runLater(() -> email.requestFocus());
+	}
 
-		Optional<Pair<String, String>> result = dialog.showAndWait();
-		
-		result.ifPresent(usernamePassword -> {
-			System.out.println("Username=" + usernamePassword.getKey() +
-					", Password=" + usernamePassword.getValue());
-		});
+	public void show() {
+		dialog.showAndWait();
 	}
 }
